fix wrapping

--- a/themes/default/theme/src/scss/docs/_docs-home.scss
+++ b/themes/default/theme/src/scss/docs/_docs-home.scss
@@ -54,7 +54,7 @@ section.docs-home {
             
             .wider {
                 max-width: 100%;
-                padding-right: 300px;
+                padding-right: 275px;
             }
             
         }
